--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cosmjs/cosmwasm-stargate": "^0.28.4",
+    "@cosmjs/stargate": "^0.28.4",
+    "@polkadot/api": "^8.4.2",
+    "@solana/web3.js": "^1.42.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +17,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.4.5",
+    "recoil": "^0.6.1",
+    "recoil-persist": "^4.1.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
